# 2019-robot-code

./: .project  README.md  build.gradle
src/Arduino/: 2019ResetLEDs.cpp  2019ResetLEDs.h  2019_Robo_Code.ino
src/Arduino/2019_Robo_Code/: 2019_Robo_Code.ino
src/Arduino/Green_Snake/: Green_Snake.ino
src/Arduino/Horse_Race/: Horse_Race.ino
src/Arduino/Purple_Breathe/: Purple_Breathe.ino
src/Arduino/RobotLEDs/: RobotLEDs.ino
src/Arduino/Sweeper/: Sweeper.ino
src/Arduino/resetLEDs/: FAB_LED.h  resetLEDs.cpp  resetLEDs.h  resetLEDs0.cpp  resetLEDs0.h  resetLEDs1.cpp  resetLEDs1.h  resetLEDs2.cpp  resetLEDs2.h  resetLEDs3.cpp  resetLEDs3.h  resetLEDs4.cpp  resetLEDs4.h  resetLEDs5.cpp  resetLEDs5.h  resetLEDs6.cpp  resetLEDs6.h  resetLEDs7.cpp  resetLEDs7.h
src/Arduino/resetLEDs/Examples/GreenSnake/GreenSnake/: GreenSnake.ino
src/Arduino/resetLEDs/Examples/HorseRace/: HorseRace.ino
src/Arduino/resetLEDs/Examples/PurpleBreathe/: PurpleBreathe.ino
src/Jetson/: .ahoy22.cpp.swp  CMakeCache.txt  CMakeLists.txt  Makefile  OrthusVisionTest  ahoy22.cpp  cmake_install.cmake
src/Jetson/Old Vision/: CMakeCache.txt  ahoy22  ahoy22.cpp  ahoy44.cpp  cmake_install.cmake
src/Jetson/OrthusVision/: CMakeLists.txt  orthusVision.cpp
src/main/java/frc/robot/: IDs.kt  Mag.kt  Main.kt  OI.kt  Orthus.kt
src/main/java/frc/robot/Util/: AlbanyTestFIle.kt  PIDSourceX.kt  PIDSourceY.kt  PIDWriteX.kt  PIDWriteY.kt  UltrasonicBase.kt
src/main/java/frc/robot/Util/AlbanyTestPidLoops.kt/: ArmPidSource.kt  ArmPidWrite.kt  ElevatorPidSouce.kt  ElevatorPidWrite.kt  WristPidSource.kt  WristPidWrite.kt
src/main/java/frc/robot/commands/Arm/: ArmJoystick.kt  JoystickDrive.kt  MoveByPow.kt  MoveToPos.kt
src/main/java/frc/robot/commands/ArmJoystick/: MoveToPos.kt
src/main/java/frc/robot/commands/BallIntake/: SpinIntake.kt  ToggleAutoStop.kt
src/main/java/frc/robot/commands/Camera/: SetFeed.kt
src/main/java/frc/robot/commands/CargoIntake/: SpinIntake.kt  ToggleAutoStop.kt
src/main/java/frc/robot/commands/Drive/: ArcadeJoystickDrive.kt  ArcadeJoystickDriveMecanum.kt  DriftMode.kt  IntertialGuidance.kt  ResetEncoders.kt  ResetGyro.kt  SetAngleLock.kt  SetFieldOriented.kt  TankJoystickDrive.kt  Test.kt  ToggleAngleLock.kt  ToggleFieldOriented.kt  distanceController.kt  distanceControllerX.kt  distanceControllerY.kt
src/main/java/frc/robot/commands/Drive/Auto/: DriveByPoint.kt  DriveByTime.kt  IntertialGuidance.kt
src/main/java/frc/robot/commands/Elevator/: ElevateToPos.kt  ElevatorJoystick.kt  ResetElevatorSensors.kt  ToggleElevator.kt
src/main/java/frc/robot/commands/Forklift/: DeployForks.kt  ForkliftJoystick.kt  ResetForkliftSensors.kt  ToggleForklift.kt
src/main/java/frc/robot/commands/LEDs/: SendPattern.kt
src/main/java/frc/robot/commands/PanelIntake/: TimedPiston.kt  TogglePiston.kt
src/main/java/frc/robot/commands/RBrake/: Deploy.kt  DeployIn.kt  DeployOut.kt  RBrakeSlave.kt  ToggleAntilock.kt
src/main/java/frc/robot/commands/Wrist/: JoystickDrive.kt  MoveByPow.kt  MoveToPos.kt  ResetWristEncoder.kt  WristJoystick.kt
src/main/java/frc/robot/data/: ArmData.kt  CargoIntakeData.kt  DrivetrainData.kt  ElevatorData.kt  ForkliftData.kt  OIData.kt  PanelIntakeData.kt  RBrakeData.kt  SensorsData.kt  WristData.kt
src/main/java/frc/robot/subsystems/: Arm.kt  AutoController.kt  BallIntake.kt  CameraController.kt  CargoIntake.kt  Drivetrain.kt  Elevator.kt  Forklift.kt  LEDController.kt  LEDs.kt  PanelIntake.kt  RBrake.kt  Sensors.kt  Wrist.kt
src/main/java/frc/robot/util/: ToggleOnButtonPress.kt
src/org/usfirst/frc/team6325/robot/: IDs.kt  OI.kt  Robot.kt
src/org/usfirst/frc/team6325/robot/subsystems/: Drivetrain.kt
(+321 files in other folders)
